// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should allow access to all services via react hook 1`] = `
<span>
  Joined Values: TEST1,TEST2,TEST3
</span>
`;

exports[`should allow access to service via react hook 1`] = `
<span>
  Hello TEST
</span>
`;

exports[`should allow access to service with qualifier via react hook 1`] = `
<span>
  Hello TEST
</span>
`;

exports[`should be able to read properties from react component 1`] = `
<span>
  Hello USER
</span>
`;

exports[`should deny access to service when the qualifier does not match 1`] = `[Error: runtime:undeclared-dependency: Package 'test' did not declare an UI dependency on interface 'test.Provider' (qualifier: 'bar'). Add the dependency to the package configuration or remove the usage.]`;

exports[`should provide the autogenerated useProperties hook 1`] = `
<div
  class="ui"
>
  Test-UI: 
  Hello World!
</div>
`;

exports[`should provide the autogenerated useService hook 1`] = `
<div
  class="ui"
>
  Test-UI: 
  TEST
</div>
`;

exports[`should provide the autogenerated useServices hook 1`] = `
<div
  class="ui"
>
  Test-UI: 
  TEST1,TEST2
</div>
`;
